HeaderView: fix custom role names not being used

QHeaderDataProxyModel did not implement roleNames(), so
QAbstractItemModel::roleNames was being used. That function returns
the default role names, ignoring any custom ones.

Fixes: QTBUG-116748
Pick-to: 6.5
Change-Id: Iff7e0d7c71c60da7ace54aee5857605e8bea8d0c
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 1fe24b6658c0835ed9fe0bc82f62312f468ec67d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>